<resources>
    <string name="app_name">Notes</string>
    <string name="my_notes">my Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_your_note_here">type your note here . . .</string>
    <string name="miscellaneous">miscellaneous</string>
    <string name="pick_color">pick color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="more">more</string>
</resources>